--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="#" class="unit-9">
               <div class="image" style="background-image: url('images/img_1.jpg');"></div>
               <div class="unit-9-content">
-                <h2>Art Gossip</h2>
+                <h2>IOT Projects</h2>
                 <span>Friday 1:00pm &mdash; 2:30pm</span>
               </div>
             </a>
@@ -118,7 +118,7 @@
             <a href="#" class="unit-9">
               <div class="image" style="background-image: url('images/img_2.jpg');"></div>
               <div class="unit-9-content">
-                <h2>Good Morning Show</h2>
+                <h2>Web Projects</h2>
                 <span>Friday 1:00pm &mdash; 2:30pm</span>
               </div>
             </a>
@@ -127,7 +127,7 @@
             <a href="#" class="unit-9">
               <div class="image" style="background-image: url('images/img_3.jpg');"></div>
               <div class="unit-9-content">
-                <h2>Blues Radio</h2>
+                <h2>Personal Development</h2>
                 <span>Friday 1:00pm &mdash; 2:30pm</span>
               </div>
             </a>
@@ -136,7 +136,7 @@
             <a href="#" class="unit-9">
               <div class="image" style="background-image: url('images/img_4.jpg');"></div>
               <div class="unit-9-content">
-                <h2>Classic Songs</h2>
+                <h2>Life Style</h2>
                 <span>Friday 1:00pm &mdash; 2:30pm</span>
               </div>
             </a>
@@ -434,7 +434,7 @@
             <a href="#"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
             <div class="p-4 bg-white">
               <span class="d-block text-secondary small text-uppercase">Jan 20th, 2019</span>
-              <h2 class="h5 text-black mb-3"><a href="#">Art Gossip by Mike Charles</a></h2>
+              <h2 class="h5 text-black mb-3"><a href="#">Projetos</a></h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias enim, ipsa exercitationem veniam quae sunt, voluptatum reprehenderit deserunt illum rem.</p>
             </div>
           </div>
