--- a/trending.html
+++ b/trending.html
@@ -36,7 +36,7 @@
         <div class="container py-1">
           <div class="row align-items-center">
             <div class="col-8 col-md-8 col-lg-4">
-              <h1 class="mb-0"><a href="index.php" class="text-white h2 mb-0"><strong>Radios<span class="text-primary">.</span></strong></a></h1>
+              <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>Radios<span class="text-primary">.</span></strong></a></h1>
             </div>
             <div class="col-4 col-md-4 col-lg-8">
               <nav class="site-navigation text-right text-md-right" role="navigation">
@@ -45,7 +45,7 @@
 
                 <ul class="site-menu js-clone-nav d-none d-lg-block">
                   <li>
-                    <a href="index.php">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <li><a href="dj.html">DJs</a></li>
                   <li class="has-children active">
